challenges/chall-11/my-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app-ingress
  namespace: moualghazi
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: webnodb.moualghazi.net4255.luxbulb.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webnodb-service
            port:
              number: 80
  - host: webdb.moualghazi.net4255.luxbulb.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webdb-service
            port:
              number: 80
